Tidying up the repo

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,12 @@
 *~
 *.swp
+*.swo
 *.tps
 *.tcp
 *.log
 *.out
 *.aux
 *.synctex
-/*.pdf
 input/
 output/
-source/
-temp/
-naboj/source/
-naboj/temp/
-naboj/input/
-naboj/output/
+source
