Náboj and module.mk updates

--- a/core/crossref.yaml
+++ b/core/crossref.yaml
@@ -1,5 +1,5 @@
 figureTitle: "Obrázok"
 tableTitle: "Tabuľka"
-figPrefix: "obr. "
-eqnPrefix: "rov. "
-tblPrefix: "tab. "
+figPrefix: ""
+eqnPrefix: ""
+tblPrefix: ""
