Added conversion temporary files ot .gitignore, fixed pandoc-crossref settings

--- a/core/crossref.yaml
+++ b/core/crossref.yaml
@@ -1,5 +1,5 @@
 figureTitle: "Obrázok"
 tableTitle: "Tabuľka"
-figPrefix: ""
-eqnPrefix: ""
-tblPrefix: ""
+figPrefix: "Obrázok"
+eqnPrefix: "Rovnica"
+tblPrefix: "Tabuľka"
