--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,6 @@
 colorama==0.3.9
-Jinja2==2.9.6
+Jinja2==2.10
 MarkupSafe==1.0
-pandoc==1.0.0b2
-pandoc-attributes==0.1.7
-pandocfilters==1.4.2
-ply==3.10
-PyYAML==3.12
-six==1.10.0
+pkg-resources==0.0.0
+ply==3.11
+PyYAML==3.13
