Fixing Náboj's stuff (could be done better though)

--- a/Pipfile
+++ b/Pipfile
@@ -9,10 +9,10 @@ python_version = "3.7"
 [dev-packages]
 
 [packages]
-colorama = "==0.3.9"
-ply = "==3.11"
+colorama = ">=0.3.9"
+ply = ">=3.11"
 "Jinja2" = ">=2.10.1"
-PyYAML = "==3.13"
+PyYAML = ">3.13"
 MarkupSafe = "==1.0"
 matplotlib = "*"
 "flake8" = "*"
