--- a/Pipfile
+++ b/Pipfile
@@ -9,10 +9,9 @@ python_version = "3.8"
 [dev-packages]
 
 [packages]
-colorama = ">=0.3.9"
+colorama = ">=0.4.3"
 ply = ">=3.11"
+pandoc-crossref = ">=0.1.1"
 "Jinja2" = ">=2.10.1"
-PyYAML = ">3.13"
-matplotlib = "*"
+PyYAML = ">=5.3"
 "flake8" = "*"
-pandoc-crossref = "*"
