--- a/Pipfile
+++ b/Pipfile
@@ -15,3 +15,7 @@ pandoc-crossref = ">=0.1.1"
 "Jinja2" = ">=2.10.1"
 PyYAML = ">=5.4"
 "flake8" = "*"
+pandoc-fignos = "*"
+pandoc-eqnos = "*"
+pandoc-tablenos = "*"
+pandoc-secnos = "*"
