--- a/Pipfile
+++ b/Pipfile
@@ -11,10 +11,11 @@ python_version = "3.10"
 [packages]
 colorama = ">=0.4.3"
 ply = ">=3.11"
-pandoc-crossref = ">=0.1.1"
 "Jinja2" = ">=2.10.1"
 PyYAML = ">=5.4"
 "flake8" = "*"
+python-frontmatter = "*"
+pandoc-crossref = ">=0.1.1"
 pandoc-fignos = "*"
 pandoc-eqnos = "*"
 pandoc-tablenos = "*"
