--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -74,3 +74,11 @@ jobs:
     - name: Test with pytest
       run: |
         pipenv run python -m pytest
+    - name: "Clone FKS"
+      uses: actions/checkout@master
+      with:
+        repository: TrojstenSK/FKS
+        path: source/seminar/FKS
+    - name: "Build FKS/38/2/2"
+      run: |
+        make output/seminar/FKS/38/2/2
