--- a/.gitmodules
+++ b/.gitmodules
@@ -4,7 +4,7 @@
 	branch = master
 [submodule "source/naboj/phys"]
 	path = source/naboj/phys
-	url = git@github.com:TrojstenSK/naboj-international
+	url = git@github.com:TrojstenSK/naboj-physics
 	branch = master
 [submodule "source/seminar/FKS"]
 	path = source/seminar/FKS
@@ -13,4 +13,4 @@
 [submodule "source/seminar/testing"]
 	path = source/seminar/testing
 	url = git@github.com:TrojstenSK/dgs-seminar-testing.git
-	branch = testing
+	branch = main
