Improved convertor and added tests

--- a/Pipfile
+++ b/Pipfile
@@ -23,7 +23,7 @@ pandoc-eqnos = "*"
 pandoc-tablenos = "*"
 pandoc-secnos = "*"
 dotmap = "*"
-argparsedirs = "==0.0.5"
+argparsedirs = "*"
 schema = "*"
 pandoc-minted = "*"
 pygments = "*"
