--- a/.gitmodules
+++ b/.gitmodules
@@ -14,9 +14,12 @@
 	path = source/seminar/FKS
 	url = git@github.com:TrojstenSK/fks
 	branch = master
+[submodule "source/seminar/FX"]
+	path = source/seminar/FX
+	url = git@github.com:TrojstenSK/FX-problems
 [submodule "source/seminar/test"]
 	path = source/seminar/test
-	url = git@github.com:TrojstenSK/dgs-seminar-testing.git
+	url = git@github.com:TrojstenSK/dgs-seminar-testing
 	branch = main
 [submodule "source/scholar/TA1"]
 	path = source/scholar/TA1
@@ -24,9 +27,6 @@
 [submodule "source/scholar/TA2"]
 	path = source/scholar/TA2
 	url = git@github.com:sesquideus/TA2
-[submodule "source/seminar/FX"]
-	path = source/seminar/FX
-	url = git@github.com:TrojstenSK/FX-problems
 [submodule "source/scholar/STA"]
 	path = source/scholar/STA
 	url = git@github.com:sesquideus/teaching-STA
