--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -64,7 +64,7 @@ jobs:
         DIR=$(dirname $0)
         TEXHOME=`kpsewhich -var-value=TEXMFHOME`
         mkdir -p $TEXHOME/tex/latex/
-        ln -s $PWD/core/tex/dgs.cls $TEXHOME/tex/latex/dgs.cls
+        ln -s $PWD/core/latex/dgs.cls $TEXHOME/tex/latex/dgs.cls
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
