--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -18,7 +18,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@master
     - uses: siacodelabs/setup-pandoc@v1
       with:
           xelatex: true
@@ -81,5 +81,5 @@ jobs:
         path: source/seminar/testing
     - name: "Build testing/01/1/1"
       run: |
-        echo "finished"
+        pwd
         # pipenv run make output/seminar/test/01/1/1
