--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -73,7 +73,7 @@ jobs:
         pipenv run flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        pipenv run python -m pytest
+        pipenv run python -m pytest -s
     - name: "Clone testing repository"
       uses: actions/checkout@master
       with:
