--- a/core/data/constants.yaml
+++ b/core/data/constants.yaml
@@ -7,66 +7,57 @@
 ### Fundamental
 planck:
     symbol:     "h"
-    value:      6.626e-34
-    exact:      6.62607015e-34
+    value:      6.62607015e-34
     unit:       "\\joule\\second"
-    digits:     3
+    digits:     4
 
 speed_light:
     symbol:     "c"
-    value:      !!float 3e8
-    exact:      299792458
+    value:      299792458
     unit:       "\\metre\\per\\second"
-    digits:     3
+    digits:     1
 
 gravity:
     symbol:     "G"
-    value:      6.67e-11
-    exact:      6.67430e-11
+    value:      6.67430e-11
     unit:       "\\newton\\metre\\squared\\per\\kilo\\gram\\squared"
     digits:     3
 
 ### Imperial
 inch:
     symbol:     "\\mathrm{in}"
-    value:      25.4
-    exact:      25.4
+    value:      0.0254
     unit:       "\\milli\\metre"
     digits:     3
 
 foot:
     symbol:     "\\mathrm{ft}"
-    value:      304.8
-    exact:      304.8
-    unit:       "\\milli\\metre"
+    value:      0.3048
+    unit:       "\\metre"
     digits:     4
 
 mile:
     symbol:     "\\mathrm{mi}"
-    value:      1.6
-    exact:      1609.344
+    value:      1609.344
     unit:       "\\metre"
     digits:     2
 
 ################## Astronomy
 gforce:
     symbol:     "g"
-    value:      10
-    exact:      9.80665
+    value:      9.80665
     unit:       "\\metre\\per\\second\\squared"
-    digits:     0
+    digits:     1
 
 radius_earth:
     symbol:     "R_{\\oplus}"
     value:      6378
-    exact:      6378
     unit:       "\\kilo\\metre"
     digits:     4
 
 mass_earth:
     symbol:     "M_{\\oplus}"
-    value:      !!float 6e+24
-    exact:      5.972168e+24
+    value:      5.972168e+24
     unit:       "\\kilo\\gram"
     digits:     2
 
@@ -84,43 +75,37 @@ obliquity_earth:
 
 radius_sun:
     symbol:     "R_{\\odot}"
-    value:      !!float 7e+8
-    exact:      6.957e+8
+    value:      6.957e+8
     unit:       "\\metre"
     digits:     2
 
 mass_sun:
     symbol:     "M_{\\odot}"
-    value:      !!float 2e+30
-    exact:      1.988475e+30
+    value:      1.988475e+30
     unit:       "\\kilo\\gram"
     digits:     2
 
 temperature_sun:
     symbol:     "T_{\\odot}"
     value:      5777
-    exact:      5777
     unit:       "\\kelvin"
     digits:     4
 
 radius_mars:
     symbol:     "R_\\Mars"
     value:      3390
-    exact:      3390
     unit:       "\\kilo\\metre"
     digits:     4
 
 tropical_year:
     symbol:     "y"
     value:      31556926
-    exact:      31556926
     unit:       "\\second"
     digits:     5
 
 day:
     symbol:     "d"
     value:      86400
-    exact:      86400
     unit:       "\\second"
     digits:     5
 
@@ -133,79 +118,68 @@ day_sidereal:
 mass_mars:
     symbol:     "M_\\Mars"
     value:      6.417e+23
-    exact:      6.417e+23
     unit:       "\\kilo\\gram"
     digits:     2
 
 au:
     symbol:     "\\mathrm{au}"
-    value:      1.5e+11
-    exact:      1.49597870700e+11
+    value:      1.49597870700e+11
     unit:       "\\metre"
     digits:     2
 
 parsec:
     symbol:     "\\mathrm{pc}"
-    value:      3.086e+16
-    exact:      30856775814913673
+    value:      30856775814913673
     unit:       "\\metre"
     digits:     4
 
 solar_flux:
     symbol:     "F_{\\odot}"
-    value:      1361
-    exact:      1366
+    value:      1366
     unit:       "\\watt\\per\\metre\\squared"
     digits:     4
 
 ##################### Gas
 avogadro:
     symbol:     "N_A"
-    value:      6.022e+23
-    exact:      6.02214076e+23
+    value:      6.02214076e+23
     unit:       "\\per\\mole"
     siextra:    "per-mode=reciprocal"
     digits:     4
 
 universal_gas:
     symbol:     "R"
-    value:      8.31
-    exact:      8.31446261815324
+    value:      8.31446261815324
     unit:       "\\joule\\per\\kelvin\\per\\mole"
     digits:     3
 
 boltzmann:
     symbol:     "k_B"
-    value:      1.38e-23
-    exact:      1.380649e-23
+    value:      1.380649e-23
     unit:       "\\joule\\per\\kelvin"
     digits:     3
 
 stefan_boltzmann:
     symbol:     "\\sigma"
-    value:      5.67e-8
-    exact:      5.670374419e-8
+    value:      5.670374419e-8
     unit:       "\\watt\\per\\metre\\squared\\per\\kelvin\\tothe{4}"
     digits:     3
 
 pressure_standard:
     symbol:     "p_0"
     value:      101325
-    exact:      101325
     unit:       "\\pascal"
     digits:     2
 
 temperature_standard:
     symbol:     "T_0"
     value:      0
-    exact:      0
     unit:       "\\celsius"
     digits:     1
 
 speed_sound:
     symbol:     "c_s"
     value:      343
-    exact:      343
     unit:       "\\metre\\per\\second"
     digits:     3
 
@@ -213,43 +187,37 @@ speed_sound:
 
 permittivity:
     symbol:     "\\epsilon_0"
-    value:      8.854e-12
-    exact:      8.8541878188e-12
+    value:      8.8541878188e-12
     unit:       "\\farad\\per\\metre"
     digits:     4
 
 permeability:
     symbol:     "\\mu_0"
-    value:      1.25e-6
-    exact:      1.25663706127e-6
+    value:      1.25663706127e-6
     unit:       "\\henry\\per\\metre"
     digits:     3
 
 elementary_charge:
     symbol:     "e"
-    value:      1.6e-19
-    exact:      1.602176634e-19
+    value:      1.602176634e-19
     unit:       "\\coulomb"
     digits:     2
 
 mass_electron:
     symbol:     "m_e"
-    value:      9.11e-31
-    exact:      9.1093837139e-31
+    value:      9.1093837139e-31
     unit:       "\\kilo\\gram"
     digits:     3
 
 mass_proton:
     symbol:     "m_p"
-    value:      1.67e-27
-    exact:      1.67262192595e-27
+    value:      1.67262192595e-27
     unit:       "\\kilo\\gram"
     digits:     3
 
 amu:
     symbol:     "u"
-    value:      1.66e-27
-    exact:      1.6605390689e-27
+    value:      1.6605390689e-27
     unit:       "\\kilo\\gram"
     digits:     3
 
@@ -258,106 +226,91 @@ amu:
 refraction_water:
     symbol:     "n_{\\ce{H2O}}"
     value:      1.333
-    exact:      1.333
     unit:       ~
     digits:     4
 
 ### Material
 density_air:
     symbol:     "\\rho_a"
-    value:      1.3
-    exact:      1.28
+    value:      1.28
     unit:       "\\kilo\\gram\\per\\metre\\cubed"
     digits:     2
 
 density_water:
     symbol:     "\\rho_{\\ce{H2O}}"
-    value:      1000
-    exact:      998
+    value:      998
     unit:       "\\kilo\\gram\\per\\metre\\cubed"
     digits:     2
 
 density_ice:
     symbol:     "\\rho_{\\ce{H2O}}"
     value:      916
-    exact:      916
     unit:       "\\kilo\\gram\\per\\metre\\cubed"
     digits:     3
 
 density_helium:
     symbol:     "\\rho_{\\ce{He}}"
     value:      0.18
-    exact:      0.18
     unit:       "\\kilo\\gram\\per\\metre\\cubed"
     digits:     3
 
 density_mercury:
     symbol:     "\\rho_{\\ce{Hg}}"
-    value:      13500
-    exact:      13546
+    value:      13546
     unit:       "\\kilo\\gram\\per\\metre\\cubed"
     digits:     3
 
 density_gold:
     symbol:     "\\rho_{\\ce{Au}}"
-    value:      19300
-    exact:      19283
+    value:      19283
     unit:       "\\kilo\\gram\\per\\metre\\cubed"
     digits:     3
 
 molar_mass_gold:
     symbol:     "M_{\\ce{Au}}"
-    value:      197
-    exact:      196.966570
+    value:      196.966570
     unit:       "\\gram\\per\\mole"
     digits:     3
 
 molar_mass_air:
     symbol:     "M_{\\mathrm{a}}"
-    value:      29
-    exact:      28.9647
+    value:      28.9647
     unit:       "\\gram\\per\\mole"
     digits:     2
 
 surface_tension_water:
     symbol:     "\\sigma"
     value:      0.072
-    exact:      0.072
     unit:       "\\newton\\per\\metre"
     digits:     2
 
 heat_capacity_water:
     symbol:     "c_{\\ce{H2O}}"
     value:      4180
-    exact:      4180
     unit:       "\\joule\\per\\kilo\\gram\\per\\kelvin"
     digits:     3
 
 heat_vaporization_water:
     symbol:     "l_{\\ce{H2O}}"
     value:      2260
-    exact:      2260
     unit:       "\\kilo\\joule\\per\\kilo\\gram"
     digits:     2
 
 heat_capacity_ice:
     symbol:     "c_\\text{\\Snow}"
-    value:      2090
-    exact:      2093
+    value:      2093
     unit:       "\\joule\\per\\kilo\\gram\\per\\kelvin"
     digits:     4
 
 heat_melting_ice:
     symbol:     "l_\\text{\\Snow}"
     value:      334000
-    exact:      334000
     unit:       "\\joule\\per\\kilo\\gram"
     digits:     3
 
 thermal_expansion_water:
     symbol:     "\\beta_{\\ce{H2O}}"
     value:      1.8e-4
-    exact:      1.8e-4
     unit:       "\\per\\kelvin"
     siextra:    "per-mode=reciprocal"
     digits:     2
