--- a/core/data/constants.yaml
+++ b/core/data/constants.yaml
@@ -15,7 +15,7 @@ planck:
     aliases:    ['h']
     value:      6.62607015e-34
     exact:      true
-    unit:       "\\joule\\second"
+    unit:       "joule second"
     digits:     4
 
 planck_bar:
@@ -23,7 +23,7 @@ planck_bar:
     aliases:    ['hbar']
     value:      1.054571817e-34
     exact:      true
-    unit:       "\\joule\\second"
+    unit:       "joule second"
     digits:     4
 
 speed_light:
@@ -31,14 +31,14 @@ speed_light:
     aliases:    ['c']
     value:      299792458
     exact:      true
-    unit:       "\\metre\\per\\second"
+    unit:       "metre / second"
     digits:     1
 
 gravity:
     symbol:     "G"
     aliases:    ['G']
     value:      6.67430e-11
-    unit:       "\\newton\\metre\\squared\\per\\kilo\\gram\\squared"
+    unit:       "newton metre squared / kilogram squared"
     digits:     3
 
 ### Imperial
@@ -46,7 +46,7 @@ inch:
     symbol:     "\\mathrm{in}"
     value:      0.0254
     exact:      true
-    unit:       "\\metre"
+    unit:       "metre"
     digits:     3
 
 foot:
@@ -54,27 +54,27 @@ foot:
     aliases:    ['ft']
     value:      0.3048
     exact:      true
-    unit:       "\\metre"
+    unit:       "metre"
     digits:     4
 
 mile:
     symbol:     "\\mathrm{mi}"
     value:      1609.344
-    unit:       "\\metre"
+    unit:       "metre"
     exact:      true
     digits:     2
 
 us_pint:
     symbol:     "\\mathrm{p}"
-    value:      0.000473176473
-    unit:       "\\metre\\cubed"
+    value:      473.176473
+    unit:       "millilitre"
     digits:     3
 
 pound:
     symbol:     "\\mathrm{lb}"
     aliases:    ['lb']
     value:      0.45359237
-    unit:       "\\kilo\\gram"
+    unit:       "kilogram"
     digits:     4
 
 
@@ -83,20 +83,20 @@ gforce:
     symbol:     "g"
     aliases:    ['g']
     value:      9.80665
-    unit:       "\\metre\\per\\second\\squared"
+    unit:       "metre / second squared"
     digits:     1
     force_f:    true
 
 radius_earth:
     symbol:     "R_{\\oplus}"
     value:      6378000
-    unit:       "\\metre"
+    unit:       "metre"
     digits:     4
 
 mass_earth:
     symbol:     "M_{\\oplus}"
     value:      5.972168e+24
-    unit:       "\\kilo\\gram"
+    unit:       "kilogram"
     digits:     2
 
 eccentricity_earth:
@@ -108,119 +108,119 @@ eccentricity_earth:
 obliquity_earth:
     symbol:     "\\epsilon_{\\Earth}"
     value:      0.40909263
-    unit:       "\\radian"
+    unit:       "radian"
     digits:     3
 
 radius_sun:
     symbol:     "R_{\\odot}"
     value:      6.957e+8
-    unit:       "\\metre"
+    unit:       "metre"
     digits:     2
 
 mass_sun:
     symbol:     "M_{\\odot}"
     value:      1.988475e+30
-    unit:       "\\kilo\\gram"
+    unit:       "kilogram"
     digits:     2
 
 temperature_sun:
     symbol:     "T_{\\odot}"
     value:      5777
-    unit:       "\\kelvin"
+    unit:       "kelvin"
     digits:     4
 
 radius_mars:
     symbol:     "R_\\Mars"
     value:      3390000
-    unit:       "\\metre"
+    unit:       "metre"
     digits:     4
 
 tropical_year:
     symbol:     "y"
     value:      31556926
-    unit:       "\\second"
+    unit:       "second"
     digits:     5
 
 day:
     symbol:     "d"
     value:      86400
     exact:      true
-    unit:       "\\second"
+    unit:       "second"
     digits:     5
 
 day_sidereal:
     symbol:     "d"
     value:      86164.0905
-    unit:       "\\second"
+    unit:       "second"
     digits:     5
 
 mass_mars:
     symbol:     "M_\\Mars"
     value:      6.417e+23
-    unit:       "\\kilo\\gram"
+    unit:       "kilogram"
     digits:     2
 
 au:
     symbol:     "\\mathrm{au}"
     value:      1.49597870700e+11
-    unit:       "\\metre"
+    unit:       "metre"
     digits:     2
 
 parsec:
     symbol:     "\\mathrm{pc}"
     aliases:    ['pc']
     value:      30856775814913673
-    unit:       "\\metre"
+    unit:       "metre"
     digits:     4
 
 solar_flux:
     symbol:     "F_{\\odot}"
     value:      1366
-    unit:       "\\watt\\per\\metre\\squared"
+    unit:       "watt per metre squared"
     digits:     4
 
 ##################### Gas
 avogadro:
     symbol:     "N_A"
     value:      6.02214076e+23
-    unit:       "\\per\\mole"
+    unit:       "1 / mole"
     siextra:    "per-mode=reciprocal"
     digits:     4
 
 universal_gas:
     symbol:     "R"
     value:      8.31446261815324
-    unit:       "\\joule\\per\\kelvin\\per\\mole"
+    unit:       "joule / kelvin / mole"
     digits:     3
 
 boltzmann:
     symbol:     "k_B"
     value:      1.380649e-23
-    unit:       "\\joule\\per\\kelvin"
+    unit:       "joule / kelvin"
     digits:     3
 
 stefan_boltzmann:
     symbol:     "\\sigma"
     value:      5.670374419e-8
-    unit:       "\\watt\\per\\metre\\squared\\per\\kelvin\\tothe{4}"
+    unit:       "watt / metre squared / kelvin^4"
     digits:     3
 
 pressure_standard:
     symbol:     "p_0"
     value:      101325
-    unit:       "\\pascal"
+    unit:       "pascal"
     digits:     2
 
 temperature_standard:
     symbol:     "T_0"
     value:      0
-    unit:       "\\celsius"
+    unit:       "celsius"
     digits:     1
 
 speed_sound:
     symbol:     "c_s"
     value:      343
-    unit:       "\\metre\\per\\second"
+    unit:       "metre / second"
     digits:     3
 
 ###################### Electromagnetic
@@ -229,41 +229,41 @@ permittivity:
     symbol:     "\\epsilon_0"
     aliases:    ['eps0']
     value:      8.8541878188e-12
-    unit:       "\\farad\\per\\metre"
+    unit:       "farad / metre"
     digits:     4
 
 permeability:
     symbol:     "\\mu_0"
     aliases:    ['mu0']
     value:      1.25663706127e-6
-    unit:       "\\henry\\per\\metre"
+    unit:       "henry / metre"
     digits:     3
 
 elementary_charge:
     symbol:     "e"
     aliases:    ['e']
     value:      1.602176634e-19
-    unit:       "\\coulomb"
+    unit:       "coulomb"
     digits:     2
 
 mass_electron:
     symbol:     "m_e"
     aliases:    ['m_e']
     value:      9.1093837139e-31
-    unit:       "\\kilo\\gram"
+    unit:       "kilogram"
     digits:     3
 
 mass_proton:
     symbol:     "m_p"
     aliases:    ['m_p']
     value:      1.67262192595e-27
-    unit:       "\\kilo\\gram"
+    unit:       "kilogram"
     digits:     3
 
 amu:
     symbol:     "u"
     value:      1.6605390689e-27
-    unit:       "\\kilo\\gram"
+    unit:       "kilogram"
     digits:     3
 
 ####################### Other
@@ -278,84 +278,84 @@ refraction_water:
 density_air:
     symbol:     "\\rho_a"
     value:      1.28
-    unit:       "\\kilo\\gram\\per\\metre\\cubed"
+    unit:       "kilogram / metre cubed"
     digits:     2
 
 density_water:
     symbol:     "\\rho_{\\ce{H2O}}"
     value:      998
-    unit:       "\\kilo\\gram\\per\\metre\\cubed"
+    unit:       "kilogram / metre cubed"
     digits:     2
 
 density_ice:
     symbol:     "\\rho_{\\ce{H2O}}"
     value:      916
-    unit:       "\\kilo\\gram\\per\\metre\\cubed"
+    unit:       "kilogram / metre cubed"
     digits:     3
 
 density_helium:
     symbol:     "\\rho_{\\ce{He}}"
     value:      0.18
-    unit:       "\\kilo\\gram\\per\\metre\\cubed"
+    unit:       "kilogram / metre cubed"
     digits:     3
 
 density_mercury:
     symbol:     "\\rho_{\\ce{Hg}}"
     value:      13546
-    unit:       "\\kilo\\gram\\per\\metre\\cubed"
+    unit:       "kilogram / metre cubed"
     digits:     3
 
 density_gold:
     symbol:     "\\rho_{\\ce{Au}}"
     value:      19283
-    unit:       "\\kilo\\gram\\per\\metre\\cubed"
+    unit:       "kilogram / metre cubed"
     digits:     3
 
 molar_mass_gold:
     symbol:     "M_{\\ce{Au}}"
     value:      196.966570
-    unit:       "\\gram\\per\\mole"
+    unit:       "gram / mole"
     digits:     3
 
 molar_mass_air:
     symbol:     "M_{\\mathrm{a}}"
     value:      28.9647
-    unit:       "\\gram\\per\\mole"
+    unit:       "gram / mole"
     digits:     2
 
 surface_tension_water:
     symbol:     "\\sigma"
     value:      0.072
-    unit:       "\\newton\\per\\metre"
+    unit:       "newton / metre"
     digits:     2
 
 heat_capacity_water:
     symbol:     "c_{\\ce{H2O}}"
     value:      4180
-    unit:       "\\joule\\per\\kilo\\gram\\per\\kelvin"
+    unit:       "joule / kilogram / kelvin"
     digits:     3
 
 heat_vaporization_water:
     symbol:     "l_{\\ce{H2O}}"
     value:      2260
-    unit:       "\\kilo\\joule\\per\\kilo\\gram"
+    unit:       "kilojoule / kilogram"
     digits:     2
 
 heat_capacity_ice:
     symbol:     "c_\\text{\\Snow}"
     value:      2093
-    unit:       "\\joule\\per\\kilo\\gram\\per\\kelvin"
+    unit:       "joule / kilogram / kelvin"
     digits:     4
 
 heat_melting_ice:
     symbol:     "l_\\text{\\Snow}"
     value:      334000
-    unit:       "\\joule\\per\\kilo\\gram"
+    unit:       "J / kg"
     digits:     3
 
 thermal_expansion_water:
     symbol:     "\\beta_{\\ce{H2O}}"
     value:      1.8e-4
-    unit:       "\\per\\kelvin"
+    unit:       "1 / kelvin"
     siextra:    "per-mode=reciprocal"
     digits:     2
